# TICFinder

./: .gitignore  404.html  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: README.md  ticfinder.md
search/: search_index.json
src/ticfinder/: __init__.py  ticfinder.py
tests/: test_ticfinder.py
ticfinder/: index.html
