[tool.poetry]
name = "ticfinder"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
astropy = "^5.1"
astroquery = "^0.4.6"
ticgen = "^1.0.4"
tqdm = "^4.64.0"
pandas = "^1.4.3"
mkdocs-include-markdown-plugin = "^3.4.0"
mkdocstrings-python = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.19.0"
pytkdocs = {version = "^0.16.1", extras = ["numpy-style"]}
jupyterlab = "<3.1.0"
pytest-remotedata = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
